// api/proto/transaction. proto
syntax = "proto3";

package crypto.v1;

option go_package = "shared/genproto/shared/accounting/cryptopb";

import "common.proto";
import "google/protobuf/timestamp.proto";

// TransactionService handles crypto transactions
service TransactionService {
    // Estimate network fee (for accounting module)
    rpc EstimateNetworkFee(EstimateNetworkFeeRequest) returns (EstimateNetworkFeeResponse);
    
    // Get withdrawal quote
    rpc GetWithdrawalQuote(GetWithdrawalQuoteRequest) returns (GetWithdrawalQuoteResponse);
    
    // Execute withdrawal from system wallet (called by accounting)
    rpc Withdraw(WithdrawRequest) returns (WithdrawResponse);
    
    // Sweep operations (internal)
    rpc SweepUserWallet(SweepUserWalletRequest) returns (SweepUserWalletResponse);

    // Sweep all user wallets for a specific asset and chain
    rpc SweepAllUsers(SweepAllUsersRequest) returns (SweepAllUsersResponse);
    
    // Transaction queries
    rpc GetTransaction(GetTransactionRequest) returns (GetTransactionResponse);

    // Get transactions for a user with filters and pagination
    rpc GetUserTransactions(GetUserTransactionsRequest) returns (GetUserTransactionsResponse);

    // Get transaction status by transaction ID
    rpc GetTransactionStatus(GetTransactionStatusRequest) returns (GetTransactionStatusResponse);
}

// ============================================================================
// NETWORK FEE ESTIMATION
// ============================================================================

message EstimateNetworkFeeRequest {
    Chain chain = 1;
    string asset = 2;
    string amount = 3;
    string to_address = 4;  // Optional, for more accurate estimation
}

message EstimateNetworkFeeResponse {
    Chain chain = 1;
    string asset = 2;
    string fee_amount = 3;       // In smallest unit
    string fee_currency = 4;     // Usually same as chain native token
    string fee_formatted = 5;    // Human-readable
    google.protobuf.Timestamp estimated_at = 6;
    int32 valid_for = 7;         // Seconds
    string explanation = 8;
}

// ============================================================================
// WITHDRAWAL
// ============================================================================

message WithdrawRequest {
    string accounting_tx_id  = 1;       // From accounting module (idempotency key)
    string user_id = 2;          // For tracking who requested
    Chain chain = 3;
    string asset = 4;
    string amount = 5;           // In smallest unit
    string to_address = 6;
    string memo = 7;             // Optional
}

message WithdrawResponse {
    Transaction transaction = 1;
    string message = 2;
}

// ============================================================================
// WITHDRAWAL QUOTE
// ============================================================================

message GetWithdrawalQuoteRequest {
    Chain chain = 1;
    string asset = 2;
    string amount = 3;
    string to_address = 4;
}

message GetWithdrawalQuoteResponse {
    string quote_id = 1;
    Chain chain = 2;
    string asset = 3;
    Money amount = 4;
    Money network_fee = 5;
    string network_fee_currency = 6;
    google.protobuf.Timestamp valid_until = 7;
    string explanation = 8;
}

// ============================================================================
// SWEEP OPERATIONS
// ============================================================================

message SweepUserWalletRequest {
    string user_id = 1;
    Chain chain = 2;
    string asset = 3;
}

message SweepUserWalletResponse {
    Transaction transaction = 1;
    string message = 2;
}

message SweepAllUsersRequest {
    Chain chain = 1;
    string asset = 2;
}

message SweepAllUsersResponse {
    repeated Transaction transactions = 1;
    int32 success_count = 2;
    int32 failed_count = 3;
    string message = 4;
}

// ============================================================================
// TRANSACTION QUERIES
// ============================================================================

message Transaction {
    int64 id = 1;
    string transaction_id = 2;
    string accounting_tx_id = 3;  // From accounting module
    string user_id = 4;
    TransactionType type = 5;
    Chain chain = 6;
    string asset = 7;
    
    string from_address = 8;
    string to_address = 9;
    bool is_internal = 10;
    
    Money amount = 11;
    Money network_fee = 12;
    
    string tx_hash = 13;
    int64 block_number = 14;
    int32 confirmations = 15;
    int32 required_confirmations = 16;
    
    TransactionStatus status = 17;
    string status_message = 18;
    
    google.protobuf.Timestamp initiated_at = 19;
    google.protobuf.Timestamp broadcasted_at = 20;
    google.protobuf.Timestamp confirmed_at = 21;
    google.protobuf.Timestamp created_at = 22;
}

message TransactionSummary {
    string transaction_id = 1;
    TransactionType type = 2;
    Chain chain = 3;
    string asset = 4;
    string amount = 5;
    string network_fee = 6;
    TransactionStatus status = 7;
    string tx_hash = 8;
    bool is_internal = 9;
    google.protobuf.Timestamp created_at = 10;
}

message GetTransactionRequest {
    string transaction_id = 1;
}

message GetTransactionResponse {
    Transaction transaction = 1;
}

message GetUserTransactionsRequest {
    string user_id = 1;
    Chain chain = 2;             // Optional filter
    string asset = 3;            // Optional filter
    TransactionType type = 4;    // Optional filter
    TransactionStatus status = 5; // Optional filter
    PaginationRequest pagination = 6;
}

message GetUserTransactionsResponse {
    repeated TransactionSummary transactions = 1;
    PaginationResponse pagination = 2;
}

message GetTransactionStatusRequest {
    string transaction_id = 1;
}

message GetTransactionStatusResponse {
    TransactionStatus status = 1;
    int32 confirmations = 2;
    int32 required_confirmations = 3;
    string tx_hash = 4;
    string status_message = 5;
    google.protobuf.Timestamp updated_at = 6;
}